# libdeviceinfo-em

./: CHANGELOG.md  CHANGELOG.md.in  CMakeLists.txt  README.md
cmake/: Findjansson.cmake
include/: CMakeLists.txt  deviceinfo.h
src/: CMakeLists.txt  deviceinfo.c  em-devinfo.c  test-deviceinfo.c
